fix(plugins/plugin-client-common): minor spacing improvements for Commentary and Notebooks
Fixes #5503

--- a/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
@@ -35,3 +35,25 @@
     }
   }
 }
+
+@mixin Block {
+  .repl-block {
+    @content;
+  }
+}
+
+@mixin ActiveBlock {
+  @include Block {
+    &.repl-active {
+      @content;
+    }
+  }
+}
+
+@mixin FinishedBlock {
+  @include Block {
+    &:not(.repl-active) {
+      @content;
+    }
+  }
+}
